--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,20 @@ jobs:
     - name: Build with Maven
       run: mvn clean install -DskipTests
     - name: Login to Docker
-      run: docket login -u gulnazb -p Fathima@123
+      run: docket login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+    - name: Build Docker image
+      run: docker build -t maslogistics/MASLogistics-01
+    - name: Publish image to docket hub
+      run: docker push maslogistics/MASLogistics-01:latest
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name: Pull image from docker hub
+        run: docker pull maslogistics/MASLogistics-01:latest
+      - name: Delete old container
+        run: docker rm -f maslogistics-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name maslogistics-container maslogistics/MASLogistics-01
+    
