--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean install -DskipTests
     - name: Login to Docker
-      run: docket login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
     - name: Build Docker image
       run: docker build -t maslogistics/MASLogistics-01
     - name: Publish image to docket hub
