--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,8 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps:
+      - name: Login to Docker
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Pull image from docker hub
         run: docker pull gulnazb/masintegration:latest
       - name: Delete old container
