--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
 		    <artifactId>spring-boot-starter-tomcat</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>cloudwatchlogs</artifactId>
+		    <version>2.20.26</version>
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
