--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 		    <artifactId>spring-boot-starter-tomcat</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-ses</artifactId>
+		    <version>1.12.119</version>
+		</dependency>
 	</dependencies>
 
 	<build>
