--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<image>
-						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
-					</image>
-				</configuration>
+                    <skip>true</skip>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
