--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-                    <skip>true</skip>
+            		<mainClass>com.mas.quotation.MasQuotationApplication</mainClass>
                 </configuration>
 			</plugin>
 		</plugins>
