--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@
 #  port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://maslogisticsdb.c7h1wp4abumo.eu-north-1.rds.amazonaws.com:3306/masconfig
-    username: masdb
-    password: DgKGvAX8+yZaDV/+koKrmybEK4cJtx2u
+    url: jdbc:mysql://localhost:3306/masconfig
+    username: root
+    password: nskZU7yofaNFeIkn2I8pusQNOhHLA6SL
     driverClassName: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 20
